--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-05-06 21:12+0100\n"
-"PO-Revision-Date: 2018-05-06 21:15+0100\n"
+"POT-Creation-Date: 2018-05-07 01:02+0100\n"
+"PO-Revision-Date: 2018-05-07 01:02+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de\n"
@@ -18,59 +18,88 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 2.0.7\n"
 
-#: .\templates\contact.html:14 .\templates\food.html:15
-#: .\templates\home.html:15 .\templates\ptv.html:14
-#: .\templates\transport.html:43
-msgid "UniCities"
-msgstr "2018 UniCities"
+#: .\templates\contact.html:17
+msgid "* must be filled out"
+msgstr "Muss ausgefüllt sein"
 
-#: .\templates\contact.html:19 .\templates\food.html:20
-#: .\templates\home.html:37 .\templates\ptv.html:19
-#: .\templates\transport.html:48
-msgid "Home"
-msgstr "Startseite"
+#: .\templates\contact.html:18
+msgid " First Name:"
+msgstr "Vorname:"
 
-#: .\templates\contact.html:20 .\templates\food.html:21
-#: .\templates\home.html:38 .\templates\ptv.html:20
-#: .\templates\transport.html:49
-msgid "Places to Visit"
-msgstr "Orte zu besuchen"
+#: .\templates\contact.html:19
+msgid "Last Name: "
+msgstr "Nachname: "
 
-#: .\templates\contact.html:21 .\templates\food.html:22
-#: .\templates\home.html:39 .\templates\ptv.html:21
-#: .\templates\transport.html:50
-msgid "Food"
-msgstr "Essen"
+#: .\templates\contact.html:20
+msgid "Email*:"
+msgstr "E-Mail*:"
 
-#: .\templates\contact.html:22 .\templates\food.html:23
-#: .\templates\home.html:40 .\templates\ptv.html:22
-#: .\templates\transport.html:51
-msgid "Transport"
-msgstr "Verkehr"
+#: .\templates\contact.html:21
+msgid " Male:"
+msgstr "Männlich:"
 
-#: .\templates\contact.html:23 .\templates\food.html:24
-#: .\templates\home.html:41 .\templates\ptv.html:23
-#: .\templates\transport.html:52
-msgid "Contact Us"
-msgstr "Kontaktiere uns"
+#: .\templates\contact.html:22
+msgid " Female:"
+msgstr "Weiblich:"
+
+#: .\templates\contact.html:23
+msgid "Continent:"
+msgstr "Kontinent:"
+
+#: .\templates\contact.html:25
+msgid "Europe"
+msgstr "Europa"
+
+#: .\templates\contact.html:26
+msgid "America"
+msgstr "Amerika"
+
+#: .\templates\contact.html:28
+msgid "Australia"
+msgstr "Australien"
+
+#: .\templates\contact.html:31
+msgid " Message:"
+msgstr "Nachricht:"
+
+#: .\templates\contact.html:34
+msgid "Where did you hear about this website?"
+msgstr "Wie sind Sie darauf aufmerksam geworden?"
+
+#: .\templates\contact.html:35
+msgid "Friend/ Word of mouth"
+msgstr "Freund / Mundpropaganda"
+
+#: .\templates\contact.html:36
+msgid "Other websites"
+msgstr "Fremde Webseiten"
+
+#: .\templates\contact.html:37
+msgid "Advertisement"
+msgstr "Werbung"
+
+#: .\templates\contact.html:38
+msgid "TV"
+msgstr "TV"
 
 #: .\templates\forum_base.html:7 .\templates\forum_base.html:16
+#: .\templates\website_base.html:76
 msgid "Forum"
 msgstr "Forum"
 
-#: .\templates\forum_base.html:29
+#: .\templates\forum_base.html:29 .\templates\website_base.html:34
 msgid "My account"
-msgstr "mein-konto"
+msgstr "Mein-konto"
 
-#: .\templates\forum_base.html:30
+#: .\templates\forum_base.html:30 .\templates\website_base.html:35
 msgid "Change password"
 msgstr "Passwort ändern"
 
-#: .\templates\forum_base.html:32
+#: .\templates\forum_base.html:32 .\templates\website_base.html:37
 msgid "Log out"
 msgstr "Abmelden"
 
-#: .\templates\home.html:83
+#: .\templates\home.html:49
 msgid ""
 "Galway is one of the brightest and most intriguing jewels of the West of "
 "Ireland. It marks the halfway point on the Wild Atlantic Way and is the only "
@@ -103,61 +132,99 @@ msgstr ""
 "Stadt, mit Torfbränden und traditioneller Musik, die in vielen Pubs der "
 "Stadt zu finden sind. Wir freuen uns, Sie bald zu begrüßen!"
 
-#: .\templates\home.html:93
+#: .\templates\ptv.html:15
 msgid ""
-"The West of Ireland and in particular County Galway is one of the most "
-"unique parts of Ireland for visitors to explore. With barren fields, rugged "
-"coastline, stone-walled fields, stark mountain ranges, and vast boglands, "
-"the West has some of the richest scenic beauty and natural attractions in "
-"Ireland. With Galway City, a true Renaissance city as its hub, the West "
-"offers a diverse set of experiences for every visitor. From the sunsets over "
-"Galway Bay to the rocky shores of the Aran Islands, and the enchanting "
-"locales of 'Quiet Man' country. Follow the trails of Connemara National "
-"Park, tour the great museums, watch craftspeople make hand-knit sweaters and "
-"other traditional crafts, sip a cup of tea beside a turf fire, or listen to "
-"the Irish language being spoken and sung. Galway provides glimpses of "
-"Ireland as it used to be, while also having a thriving urban centre at its "
-"heart."
+"The Garden Bar at Jurys Inn Galway is one of the city’s hidden gems. The "
+"Garden Bar is Galway’s largest beer garden and is situated adjacent to the "
+"River Corrib overlooking the World famous Claddagh and Galway’s Fishery "
+"watchtower. This amazing sun trap is the place to be on a summer’s day and "
+"often becomes Galway’s main hot spot for a relaxing coffee, a bite to eat or "
+"an evening of refreshing drinks. The garden has a capacity of over 150 "
+"people with a wide range of garden furniture to enjoy the wonderful "
+"surroundings. The area is serviced with a full sound system playing various "
+"genres of music to suit the tone of the day. The Garden Bar is the ideal "
+"spot for a casual get together or larger party with the hotel offering a "
+"full BBQ menu in the summer months with a dedicated Chef to cater for any "
+"occasion."
 msgstr ""
-"Der Westen von Irland und insbesondere County Galway ist einer der "
-"einzigartigsten Teile von Irland für Besucher zu erkunden. Mit kargen "
-"Feldern, einer zerklüfteten Küste, Feldern mit Steinmauern, kahlen "
-"Gebirgsketten und ausgedehnten Moorlandschaften bietet der Westen einige der "
-"landschaftlich reizvollsten und schönsten Naturschönheiten Irlands. Mit "
-"Galway City, einer wahren Renaissance-Stadt als Drehkreuz, bietet der Westen "
-"für jeden Besucher vielfältige Erlebnisse. Von den Sonnenuntergängen über "
-"die Bucht von Galway bis zu den felsigen Ufern der Aran-Inseln und den "
-"bezaubernden Orten des \"Quiet Man\" -Landes. Folgen Sie den Pfaden des "
-"Connemara Nationalparks, besuchen Sie die großen Museen, beobachten Sie, wie "
-"Kunsthandwerker handgestrickte Pullover und andere traditionelle "
-"Handwerkskunst herstellen, trinken Sie eine Tasse Tee neben einem Rasenfeuer "
-"oder hören Sie die irische Sprache, die gesprochen und gesungen wird. Galway "
-"bietet Einblicke in Irland, wie es einmal war, und hat auch ein blühendes "
-"Stadtzentrum in seinem Herzen."
+"Die Garden Bar im Jurys Inn Galway ist eines der versteckten Juwelen der "
+"Stadt. Die Garden Bar ist Galways größter Biergarten und liegt neben dem "
+"Fluss Corrib mit Blick auf den weltberühmten Claddagh und Galway's Wachturm. "
+"Diese erstaunliche Sonnenfalle ist der Ort, an dem man an einem Sommertag "
+"sein kann, und wird oft zu Galways Haupt-Hotspot für einen entspannenden "
+"Kaffee, eine Kleinigkeit zu essen oder einen Abend mit erfrischenden "
+"Getränken. Der Garten hat eine Kapazität von über 150 Personen mit einer "
+"großen Auswahl an Gartenmöbeln, um die wundervolle Umgebung zu genießen. Die "
+"Gegend ist mit einem kompletten Soundsystem ausgestattet, das verschiedene "
+"Musikrichtungen spielt, um dem Tagesrhythmus zu entsprechen. Die Garden Bar "
+"ist der ideale Ort für ein zwangloses Zusammensein oder eine größere Party. "
+"Das Hotel bietet in den Sommermonaten ein komplettes Barbecue-Menü mit einem "
+"engagierten Küchenchef für jeden Anlass."
+
+#: .\templates\ptv.html:22
+msgid ""
+"Spanning nearly 3,000 hectares of mountains, bogs, heaths and woodlands, "
+"Connemara National Park is a fantastic spot for walking and hiking There are "
+"actually 3 walks to do within the park. The pathways are well marked out and "
+"signposted and the walks are planned to suit everyone, from the novice to "
+"the well-seasoned walker. You also have the added comfort of having Park "
+"Rangers on hand, just in case you get into any difficulties."
+msgstr ""
+"Der Connemara Nationalpark erstreckt sich über fast 3.000 Hektar Berge, "
+"Moore, Heiden und Wälder und ist ein fantastischer Ort zum Spazieren und "
+"Wandern. Es gibt 3 Spaziergänge innerhalb des Parks. Die Wege sind gut "
+"ausgeschildert und ausgeschildert und die Wanderungen sind für jeden "
+"geeignet, vom Anfänger bis zum erfahrenen Wanderer. Sie haben auch den "
+"zusätzlichen Komfort, Park Ranger zur Hand zu haben, nur für den Fall, dass "
+"Sie in Schwierigkeiten geraten."
 
 #: .\templates\topics.html:16
 msgid "New topic"
 msgstr "Neues Thema"
 
-#: .\templates\transport.html:95
+#: .\templates\transport.html:15
 msgid "Bus"
 msgstr "Bus"
 
-#: .\templates\transport.html:107
+#: .\templates\transport.html:27
 msgid "Bike"
 msgstr "Fahrrad"
 
-#: .\templates\transport.html:118
+#: .\templates\transport.html:38
 msgid "Train"
 msgstr "Zug"
 
-#: .\templates\transport.html:141
-msgid "Copyright"
-msgstr "Urheberrecht"
-
-#: .\templates\transport.html:141
-msgid "2018 UniCities"
+#: .\templates\website_base.html:21
+msgid "UniCities"
 msgstr "2018 UniCities"
+
+#: .\templates\website_base.html:43
+msgid "Log in"
+msgstr "Abmelden"
+
+#: .\templates\website_base.html:44
+msgid "Sign up"
+msgstr "Anmelden"
+
+#: .\templates\website_base.html:71
+msgid "Home"
+msgstr "Startseite"
+
+#: .\templates\website_base.html:72
+msgid "Places to Visit"
+msgstr "Orte zu besuchen"
+
+#: .\templates\website_base.html:73
+msgid "Food"
+msgstr "Essen"
+
+#: .\templates\website_base.html:74
+msgid "Transport"
+msgstr "Verkehr"
+
+#: .\templates\website_base.html:75
+msgid "Contact Us"
+msgstr "Kontaktiere uns"
 
 #: .\tourGalway\settings.py:122
 msgid "German"
@@ -166,6 +233,46 @@ msgstr "Deutsch"
 #: .\tourGalway\settings.py:123
 msgid "简体中文"
 msgstr "简体中文"
+
+#~ msgid "language"
+#~ msgstr "Sprache"
+
+#~ msgid ""
+#~ "The West of Ireland and in particular County Galway is one of the most "
+#~ "unique parts of Ireland for visitors to explore. With barren fields, "
+#~ "rugged coastline, stone-walled fields, stark mountain ranges, and vast "
+#~ "boglands, the West has some of the richest scenic beauty and natural "
+#~ "attractions in Ireland. With Galway City, a true Renaissance city as its "
+#~ "hub, the West offers a diverse set of experiences for every visitor. From "
+#~ "the sunsets over Galway Bay to the rocky shores of the Aran Islands, and "
+#~ "the enchanting locales of 'Quiet Man' country. Follow the trails of "
+#~ "Connemara National Park, tour the great museums, watch craftspeople make "
+#~ "hand-knit sweaters and other traditional crafts, sip a cup of tea beside "
+#~ "a turf fire, or listen to the Irish language being spoken and sung. "
+#~ "Galway provides glimpses of Ireland as it used to be, while also having a "
+#~ "thriving urban centre at its heart."
+#~ msgstr ""
+#~ "Der Westen von Irland und insbesondere County Galway ist einer der "
+#~ "einzigartigsten Teile von Irland für Besucher zu erkunden. Mit kargen "
+#~ "Feldern, einer zerklüfteten Küste, Feldern mit Steinmauern, kahlen "
+#~ "Gebirgsketten und ausgedehnten Moorlandschaften bietet der Westen einige "
+#~ "der landschaftlich reizvollsten und schönsten Naturschönheiten Irlands. "
+#~ "Mit Galway City, einer wahren Renaissance-Stadt als Drehkreuz, bietet der "
+#~ "Westen für jeden Besucher vielfältige Erlebnisse. Von den "
+#~ "Sonnenuntergängen über die Bucht von Galway bis zu den felsigen Ufern der "
+#~ "Aran-Inseln und den bezaubernden Orten des \"Quiet Man\" -Landes. Folgen "
+#~ "Sie den Pfaden des Connemara Nationalparks, besuchen Sie die großen "
+#~ "Museen, beobachten Sie, wie Kunsthandwerker handgestrickte Pullover und "
+#~ "andere traditionelle Handwerkskunst herstellen, trinken Sie eine Tasse "
+#~ "Tee neben einem Rasenfeuer oder hören Sie die irische Sprache, die "
+#~ "gesprochen und gesungen wird. Galway bietet Einblicke in Irland, wie es "
+#~ "einmal war, und hat auch ein blühendes Stadtzentrum in seinem Herzen."
+
+#~ msgid "Copyright"
+#~ msgstr "Urheberrecht"
+
+#~ msgid "2018 UniCities"
+#~ msgstr "2018 UniCities"
 
 #~ msgid "BoardPostsTopicsLast Post"
 #~ msgstr "BoardBeiträgeThemenLetzterBeitrag"
