--- a/locale/zh_Hans/LC_MESSAGES/django.po
+++ b/locale/zh_Hans/LC_MESSAGES/django.po
@@ -7,70 +7,99 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-05-06 21:39+0100\n"
-"PO-Revision-Date: 2018-05-06 21:42+0100\n"
+"POT-Creation-Date: 2018-05-07 01:02+0100\n"
+"PO-Revision-Date: 2018-05-07 01:02+0100\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"Last-Translator: \n"
-"Language-Team: \n"
 "X-Generator: Poedit 2.0.7\n"
 
-#: .\templates\contact.html:14 .\templates\food.html:15
-#: .\templates\home.html:15 .\templates\ptv.html:14
-#: .\templates\transport.html:43
-msgid "UniCities"
-msgstr ""
+#: .\templates\contact.html:17
+msgid "* must be filled out"
+msgstr "必须填写"
 
-#: .\templates\contact.html:19 .\templates\food.html:20
-#: .\templates\home.html:37 .\templates\ptv.html:19
-#: .\templates\transport.html:48
-msgid "Home"
-msgstr "首页"
+#: .\templates\contact.html:18
+msgid " First Name:"
+msgstr "名字:"
 
-#: .\templates\contact.html:20 .\templates\food.html:21
-#: .\templates\home.html:38 .\templates\ptv.html:20
-#: .\templates\transport.html:49
-msgid "Places to Visit"
-msgstr "访问地点；"
+#: .\templates\contact.html:19
+msgid "Last Name: "
+msgstr "姓氏:"
 
-#: .\templates\contact.html:21 .\templates\food.html:22
-#: .\templates\home.html:39 .\templates\ptv.html:21
-#: .\templates\transport.html:50
-msgid "Food"
-msgstr "食物"
+#: .\templates\contact.html:20
+msgid "Email*:"
+msgstr "邮箱"
 
-#: .\templates\contact.html:22 .\templates\food.html:23
-#: .\templates\home.html:40 .\templates\ptv.html:22
-#: .\templates\transport.html:51
-msgid "Transport"
-msgstr "运输"
+#: .\templates\contact.html:21
+msgid " Male:"
+msgstr "男"
 
-#: .\templates\contact.html:23 .\templates\food.html:24
-#: .\templates\home.html:41 .\templates\ptv.html:23
-#: .\templates\transport.html:52
-msgid "Contact Us"
-msgstr "联系我们"
+#: .\templates\contact.html:22
+msgid " Female:"
+msgstr "女性"
+
+#: .\templates\contact.html:23
+msgid "Continent:"
+msgstr "大洲"
+
+#: .\templates\contact.html:25
+msgid "Europe"
+msgstr "欧洲"
+
+#: .\templates\contact.html:26
+msgid "America"
+msgstr "美国"
+
+#: .\templates\contact.html:28
+msgid "Australia"
+msgstr "澳大利亚"
+
+#: .\templates\contact.html:31
+msgid " Message:"
+msgstr "信息："
+
+#: .\templates\contact.html:34
+msgid "Where did you hear about this website?"
+msgstr "你从哪里听说过这个网站"
+
+#: .\templates\contact.html:35
+msgid "Friend/ Word of mouth"
+msgstr "朋友/口碑"
+
+#: .\templates\contact.html:36
+msgid "Other websites"
+msgstr "其他网站"
+
+#: .\templates\contact.html:37
+msgid "Advertisement"
+msgstr "广告"
+
+#: .\templates\contact.html:38
+msgid "TV"
+msgstr "TV"
 
 #: .\templates\forum_base.html:7 .\templates\forum_base.html:16
+#: .\templates\website_base.html:76
 msgid "Forum"
 msgstr "论坛"
 
-#: .\templates\forum_base.html:29
+#: .\templates\forum_base.html:29 .\templates\website_base.html:34
 msgid "My account"
 msgstr "我的账户"
 
-#: .\templates\forum_base.html:30
+#: .\templates\forum_base.html:30 .\templates\website_base.html:35
 msgid "Change password"
 msgstr "修改密码"
 
-#: .\templates\forum_base.html:32
+#: .\templates\forum_base.html:32 .\templates\website_base.html:37
 msgid "Log out"
 msgstr "登出"
 
-#: .\templates\home.html:84
+#: .\templates\home.html:49
 msgid ""
 "Galway is one of the brightest and most intriguing jewels of the West of "
 "Ireland. It marks the halfway point on the Wild Atlantic Way and is the only "
@@ -96,57 +125,91 @@ msgstr ""
 "全年其他众多活动聚集了众多人潮。爱尔兰的热情好客的传统也在城市中占有一席之"
 "地，这座城市的许多酒吧都设有草坪火和传统音乐。我们期待尽快欢迎您！"
 
-#: .\templates\home.html:94
+#: .\templates\ptv.html:15
 msgid ""
-"The West of Ireland and in particular County Galway is one of the most "
-"unique parts of Ireland for visitors to explore. With barren fields, rugged "
-"coastline, stone-walled fields, stark mountain ranges, and vast boglands, "
-"the West has some of the richest scenic beauty and natural attractions in "
-"Ireland. With Galway City, a true Renaissance city as its hub, the West "
-"offers a diverse set of experiences for every visitor. From the sunsets over "
-"Galway Bay to the rocky shores of the Aran Islands, and the enchanting "
-"locales of 'Quiet Man' country. Follow the trails of Connemara National "
-"Park, tour the great museums, watch craftspeople make hand-knit sweaters and "
-"other traditional crafts, sip a cup of tea beside a turf fire, or listen to "
-"the Irish language being spoken and sung. Galway provides glimpses of "
-"Ireland as it used to be, while also having a thriving urban centre at its "
-"heart."
+"The Garden Bar at Jurys Inn Galway is one of the city’s hidden gems. The "
+"Garden Bar is Galway’s largest beer garden and is situated adjacent to the "
+"River Corrib overlooking the World famous Claddagh and Galway’s Fishery "
+"watchtower. This amazing sun trap is the place to be on a summer’s day and "
+"often becomes Galway’s main hot spot for a relaxing coffee, a bite to eat or "
+"an evening of refreshing drinks. The garden has a capacity of over 150 "
+"people with a wide range of garden furniture to enjoy the wonderful "
+"surroundings. The area is serviced with a full sound system playing various "
+"genres of music to suit the tone of the day. The Garden Bar is the ideal "
+"spot for a casual get together or larger party with the hotel offering a "
+"full BBQ menu in the summer months with a dedicated Chef to cater for any "
+"occasion."
 msgstr ""
-"爱尔兰西部，特别是戈尔韦郡是爱尔兰最独特的地区之一，供游客探索。西部拥有贫瘠"
-"的土地，崎岖的海岸线，石墙山，崎岖的山脉和广阔的沼泽地，拥有爱尔兰最富有的风"
-"景美景和自然景观。随着戈尔韦市，一个真正的文艺复兴城市作为其中心，西方为每位"
-"游客提供了多样化的体验。从戈尔韦湾的日落到阿兰群岛的岩石海岸，以及'安静的"
-"人'国家迷人的地方。沿着康尼马拉国家公园的小径，参观伟大的博物馆，观看手工艺人"
-"制作手工编织的毛衣和其他传统工艺品，在草坪火旁喝一杯茶，或听爱尔兰语说唱。戈"
-"尔韦以前是爱尔兰的一瞥，同时它的心脏也拥有蓬勃发展的城市中心。"
+"Jurys Inn Galway酒店的花园酒吧是这座城市隐藏的宝石之一。花园酒吧是戈尔韦最大"
+"的啤酒花园，毗邻Corrib河，俯瞰世界着名的Claddagh和戈尔韦的渔业守望台。这个惊"
+"人的太阳陷阱是夏季的一天，经常成为戈尔韦休闲咖啡，吃东西或晚上清凉饮料的主要"
+"热点。花园拥有超过150人的能力，种类繁多的花园家具可以享受美妙的环境。该地区配"
+"有完整的音响系统，可播放各种类型的音乐以适应当天的气氛。花园酒吧是休闲聚会或"
+"大型派对的理想场所，酒店在夏季提供全套烧烤菜单，并配有专门的厨师以满足任何场"
+"合的需求。"
+
+#: .\templates\ptv.html:22
+msgid ""
+"Spanning nearly 3,000 hectares of mountains, bogs, heaths and woodlands, "
+"Connemara National Park is a fantastic spot for walking and hiking There are "
+"actually 3 walks to do within the park. The pathways are well marked out and "
+"signposted and the walks are planned to suit everyone, from the novice to "
+"the well-seasoned walker. You also have the added comfort of having Park "
+"Rangers on hand, just in case you get into any difficulties."
+msgstr ""
+"康尼马拉国家公园拥有近3000公顷的山脉，沼泽，荒地和林地，是步行和远足的绝佳去"
+"处。公园内实际上有3条步道。这些通道已标出并标示出来，散步计划适合每个人，从新"
+"手到熟练的步行者。如果您遇到任何困难，您还可以获得公园巡游者的便利。"
 
 #: .\templates\topics.html:16
 msgid "New topic"
 msgstr "新话题"
 
-#: .\templates\transport.html:95
+#: .\templates\transport.html:15
 msgid "Bus"
 msgstr "总线"
 
-#: .\templates\transport.html:107
+#: .\templates\transport.html:27
 msgid "Bike"
 msgstr "自行车"
 
-#: .\templates\transport.html:118
+#: .\templates\transport.html:38
 msgid "Train"
 msgstr "培养"
 
-#: .\templates\transport.html:141
-msgid "Copyright"
+#: .\templates\website_base.html:21
+msgid "UniCities"
 msgstr ""
 
-#: .\templates\transport.html:141
-msgid "2018 UniCities"
-msgstr ""
+#: .\templates\website_base.html:43
+#, fuzzy
+#| msgid "Log out"
+msgid "Log in"
+msgstr "登出"
 
-#: .\tourGalwayWebsite\views.py:86
-msgid "Welcome to the discussion board!"
-msgstr ""
+#: .\templates\website_base.html:44
+msgid "Sign up"
+msgstr "注册"
+
+#: .\templates\website_base.html:71
+msgid "Home"
+msgstr "首页"
+
+#: .\templates\website_base.html:72
+msgid "Places to Visit"
+msgstr "访问地点；"
+
+#: .\templates\website_base.html:73
+msgid "Food"
+msgstr "食物"
+
+#: .\templates\website_base.html:74
+msgid "Transport"
+msgstr "运输"
+
+#: .\templates\website_base.html:75
+msgid "Contact Us"
+msgstr "联系我们"
 
 #: .\tourGalway\settings.py:122
 msgid "German"
@@ -155,3 +218,27 @@ msgstr ""
 #: .\tourGalway\settings.py:123
 msgid "简体中文"
 msgstr ""
+
+#~ msgid ""
+#~ "The West of Ireland and in particular County Galway is one of the most "
+#~ "unique parts of Ireland for visitors to explore. With barren fields, "
+#~ "rugged coastline, stone-walled fields, stark mountain ranges, and vast "
+#~ "boglands, the West has some of the richest scenic beauty and natural "
+#~ "attractions in Ireland. With Galway City, a true Renaissance city as its "
+#~ "hub, the West offers a diverse set of experiences for every visitor. From "
+#~ "the sunsets over Galway Bay to the rocky shores of the Aran Islands, and "
+#~ "the enchanting locales of 'Quiet Man' country. Follow the trails of "
+#~ "Connemara National Park, tour the great museums, watch craftspeople make "
+#~ "hand-knit sweaters and other traditional crafts, sip a cup of tea beside "
+#~ "a turf fire, or listen to the Irish language being spoken and sung. "
+#~ "Galway provides glimpses of Ireland as it used to be, while also having a "
+#~ "thriving urban centre at its heart."
+#~ msgstr ""
+#~ "爱尔兰西部，特别是戈尔韦郡是爱尔兰最独特的地区之一，供游客探索。西部拥有贫"
+#~ "瘠的土地，崎岖的海岸线，石墙山，崎岖的山脉和广阔的沼泽地，拥有爱尔兰最富有"
+#~ "的风景美景和自然景观。随着戈尔韦市，一个真正的文艺复兴城市作为其中心，西方"
+#~ "为每位游客提供了多样化的体验。从戈尔韦湾的日落到阿兰群岛的岩石海岸，以"
+#~ "及'安静的人'国家迷人的地方。沿着康尼马拉国家公园的小径，参观伟大的博物馆，"
+#~ "观看手工艺人制作手工编织的毛衣和其他传统工艺品，在草坪火旁喝一杯茶，或听爱"
+#~ "尔兰语说唱。戈尔韦以前是爱尔兰的一瞥，同时它的心脏也拥有蓬勃发展的城市中"
+#~ "心。"
